# DR_Safe_Navigation

./: .gitignore  LICENSE  README.md
src/erl_clf_cbf_controller/: CMakeLists.txt  package.xml  setup.py
src/erl_clf_cbf_controller/launch/: clf_cbf_control.launch  clf_cbf_mov_obs.launch  robo_clf_cbf.launch  robo_mov_obs.launch
src/erl_clf_cbf_controller/rqt_config/: clf_cbf_rqt.xml
src/erl_clf_cbf_controller/rviz/: test_cone_controller_p3d.rviz  test_cone_controller_p3d_sdf.rviz
src/erl_clf_cbf_controller/src/erl_clf_cbf_controller/: clf_cbf_controller.py  clf_cbf_controller_node.py  clf_cbf_drccp_dynamic_controller.py  clf_cbf_socp_controller_gp_map.py  clf_only_controller.py  controller_config.json  post_process.py  pre_process.py
src/erl_common/: CMakeLists.txt  package.xml
src/erl_common/cmake/: README.md  erl_commonConfig.cmake.in  erl_common_tools.cmake
src/erl_common/include/erl_common/: clip.hpp  eigen.hpp  exception.hpp  fmt.hpp  grid_map_info.hpp  logging.hpp  opencv.hpp  progress_bar.hpp  random.hpp  storage_order.hpp  string_utils.hpp  yaml.hpp
src/erl_common/src/: random.cpp
src/erl_covariance/: .gitignore  CMakeLists.txt  package.xml
src/erl_covariance/cmake/: erl_covarianceConfig.cmake.in
src/erl_covariance/include/erl_covariance/: covariance.hpp  matern32.hpp  ornstein_uhlenbeck.hpp
src/erl_covariance/src/: covariance.cpp
src/erl_development/car_control/: CMakeLists.txt  README.md  package.xml
src/erl_development/car_control/config/: dd_gains.yaml  power_diagram_gains.yaml
src/erl_development/car_control/script/: cmd_vel_to_ackermann_drive.py  dd_controller.py
src/erl_development/car_control/src/: DDControl.cpp  dd_control_node.cpp  power_diagram_control.cpp  power_diagram_node.cpp
src/erl_development/erl_astar/: .gitignore  CMakeLists.txt  Doxyfile  README.md  bitbucket-pipelines.yml  package.xml
src/erl_development/erl_astar/src/: astar_nx.cpp  jps_2D.cpp  jps_3D.cpp
src/erl_development/erl_astar_ros/: CMakeLists.txt  README.md  package.xml
src/erl_development/erl_astar_ros/launch/: erl_astar_2d_barebones.launch  erl_astar_2d_node.launch  erl_astar_costmap2d_node.launch  erl_jackal_2d.launch  test_astar_2d_p3d_odom_hector_map.launch  test_astar_costmap2d_p3d_odom_hector_map.launch
src/erl_development/erl_astar_ros/rviz/: jackal_gmapping_astar_2d.rviz  test_jackal_astar_2d.rviz
src/erl_development/erl_astar_ros/src/: erl_astar_2d_online_node.cpp  erl_astar_costmap2d_online_node.cpp
src/erl_development/erl_conversions/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
src/erl_development/erl_conversions/examples/: test_pyBarebones.py
src/erl_development/erl_conversions/src/: conversions.cpp  msg_to_tf.cpp  odom_to_tf.cpp
src/erl_development/erl_conversions/test/: CMakeLists.txt
src/erl_development/erl_env/: .gitignore  CMakeLists.txt  Doxyfile  README.md  bitbucket-pipelines.yml  index.html  package.xml
src/erl_development/erl_env/examples/: mprim_2D.py  mprim_FAS2D3O.py  mprim_FAS2D4O.py  mprim_SE2.py  mprim_SE3.py
src/erl_development/erl_env/test/: CMakeLists.txt  test_Constructors.cpp  test_MotionPrimitive.cpp
src/erl_development/erl_map/: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml  setup.py
src/erl_development/erl_map/cmake/: erl_map-extras.cmake
src/erl_development/erl_map/examples/: map_slicing.py  read_map.py
src/erl_development/erl_map/test/: CMakeLists.txt  test_cgal.cpp
src/erl_development/erl_map_ros/: CMakeLists.txt  README.md  package.xml
src/erl_development/erl_map_ros/include/: depth_sim.h
src/erl_development/erl_map_ros/launch/: convert_legacy_map.launch  convert_mesh_gridmap.launch  test_depth_sim.launch  test_gridmap_server.launch  test_landmark_server.launch
src/erl_development/erl_map_ros/rviz/: test_depth_sim.rviz  test_gridmap_server.rviz
src/erl_development/erl_map_ros/src/: convert_legacy_gridmap.cpp  convert_mesh_gridmap.cpp  gridmap_server.cpp  online_gridmap_server.cpp  test_depth_sim.cpp
src/erl_development/erl_models/: CMakeLists.txt  README.md  package.xml
src/erl_development/erl_models/data/: results_2_6_v6.mat
src/erl_development/erl_models/launch/: spawn_robot.launch  spawn_world.launch
src/erl_development/erl_models/rviz/: ground_air.cfg.rviz  mobile_hokuyo.rviz  mobile_rgbd.rviz  mobile_velodyne.rviz  pelican01.cfg.rviz  quadrotor.rviz  racecar01.cfg.rviz  scarab40.cfg.rviz  scarab40_astar.cfg.rviz  scarab40_zhl.cfg.rviz
src/erl_development/erl_models/scripts/: ig_manager.py  playback_quadrotor_matfile.py  start_auto_mode.sh
src/erl_development/erl_models/src/: mesh_visualization.cpp
src/erl_development/erl_models/worlds/: doors_chairs.world  doors_chairs.yaml  fla_modified.world  fla_warehouse1.world  fla_warehouse2.world  lejeune.world  levine.world  objects.world  racecar_ar.world  racecar_cones.world  racecar_parking_1.world  racecar_tunnel.world  racecar_walker.world  simple.world  (+2 more)
src/erl_development/erl_visualization/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  plugin_description.xml  setup.py
src/erl_gaussian_process/: .clang-format  CMakeLists.txt  package.xml
src/erl_gaussian_process/cmake/: erl_gaussian_processConfig.cmake.in
src/erl_gaussian_process/src/: lidar_gp_1d.cpp  mapping.cpp  noisy_input_gp.cpp  vanilla_gp.cpp
src/erl_geometry/: .gitignore  CMakeLists.txt  package.xml
src/erl_geometry/cmake/: erl_geometryConfig.cmake.in
src/erl_geometry/src/: abstract_quadtree.cpp
src/erl_moving_obstacle/: CMakeLists.txt  package.xml  setup.py
src/erl_moving_obstacle/launch/: mov_obs_info.launch  mov_obs_info_vicon.launch
src/erl_moving_obstacle/rviz/: ref_gvn_dummy_movobs.rviz  ref_gvn_movobs.rviz
src/erl_sdf_mapping/: .clang-format  .gitignore  CMakeLists.txt  package.xml
src/erl_sdf_mapping/config/: sdf_mapping.yaml  surface_mapping.yaml  visualize_quadtree.yaml
src/erl_sdf_mapping/src/: gp_occ_surface_mapping_2d.cpp  gp_sdf_mapping_2d.cpp  log_sdf_gp.cpp
src/erl_sdf_mapping/srv/: PredictSdf.srv
src/ref_gvn_lite/: CMakeLists.txt  package.xml  setup.py
(+426 files in other folders)
