<?xml version="1.0"?>
<package format="2">
    <name>erl_geometry</name>
    <version>0.1.0</version>
    <description>erl_geometry is a C++ library of geometry data structures, algorithms and datasets.</description>
    <author email="daizhirui@hotmail.com">Zhirui Dai</author>
    <maintainer email="daizhirui@hotmail.com">Zhirui Dai</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/ExistentialRobotics/erl_geometry.git</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>erl_common</build_depend>

    <build_export_depend>erl_common</build_export_depend>

</package>
