<?xml version="1.0"?>
<package format="2">
  <name>erl_moving_obstacle</name>
  <version>0.0.0</version>
  <description>The erl_moving_obstacle package is for moving obstacle simulation</description>

  <maintainer email="zln@todo.todo">zln</maintainer>
  <license>MIT</license>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export></export>
</package>
