<?xml version="1.0"?>
<package format="2">
    <name>erl_sdf_mapping</name>
    <version>0.1.0</version>
    <description>erl_sdf_mapping is a C++ library for SDF estimation.</description>
    <author email="daizhirui@hotmail.com">Zhirui Dai</author>
    <maintainer email="daizhirui@hotmail.com">Zhirui Dai</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/ExistentialRobotics/erl_sdf_mapping.git</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>erl_common</depend>
    <depend>erl_gaussian_process</depend>
    <depend>erl_geometry</depend>
    <depend>cv_bridge</depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <test_depend>rosunit</test_depend>
    <test_depend>erl_common</test_depend>
    <test_depend>erl_gaussian_process</test_depend>
    <test_depend>erl_geometry</test_depend>

</package>
