<package format="2">
  <name>erl_astar</name>
  <version>0.1.0</version>
  <description> search-based planning </description>
  <author>Nikolay Atanasov</author>
  <maintainer email="atanasov@seas.upenn.edu">Nikolay Atanasov</maintainer>
  <license>GPLv3</license>
  
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <depend>pybind11_catkin</depend>
    
  <!-- specifies that a dependency is a build, export, and execution -->
  <!--
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  -->
  <depend>erl_utilities</depend>
  <depend>erl_map</depend>
  <depend>erl_env</depend>
  <!-- Dependencies needed to compile this package. -->
  <!--
  <build_depend>message_generation</build_depend>
  -->
  
  <!-- Dependencies needed after this package is compiled. -->
  <!--
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <test_depend>python-mock</test_depend>
  <doc_depend>doxygen</doc_depend>
  -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>  
</package>
