<?xml version="1.0"?>
<package format="2">
  <name>erl_conversions</name>
  <version>0.0.1</version>
  <description>The erl_barebones package</description>
  <maintainer email="natanasov@ucsd.edu">Nikolay Atanasov</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>topic_tools</depend>
  <depend>tf_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>pcl_msgs</depend>
  
  <depend>erl_map</depend>
  <depend>erl_utilities</depend>
  <!-- <depend>erl_estimation</depend> commented out by zhl--> 
  <depend>erl_msgs</depend>

  <depend>pybind11_catkin</depend>
  <!--  <test_depend>gtest</test_depend>-->


  <!--
  <export>
    <build_type>cmake</build_type> 
  </export>
  -->
</package>

