<package format="2">
  <name>erl_env</name>
  <version>0.1.0</version>
  <description> Environment Package for use in search based planning. </description>
  <author>Nikolay Atanasov</author>
  <maintainer email="atanasov@seas.upenn.edu">Nikolay Atanasov</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <depend>pybind11_catkin</depend>
  <depend>erl_map</depend>
  <depend>erl_utilities</depend>
  
  <doc_depend>doxygen</doc_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>  
</package>
