<?xml version="1.0"?>
<package format="2">
  <name>erl_map_ros</name>
  <version>0.0.1</version>
  <description>The erl_map_ros package</description>
  <maintainer email="natanasov@ucsd.edu">Nikolay Atanasov</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <!--<depend>pybind11_catkin</depend>-->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>erl_map</depend>
  <depend>erl_msgs</depend>
  <depend>erl_conversions</depend>
  <depend>erl_utilities</depend>
  <!--<test_depend>gtest</test_depend> -->
  
  
  <!--
  <export>
    <build_type>cmake</build_type> 
  </export>
  -->
</package>

